# autogen-learning

./: .gitignore  README.md  main.py  pyproject.toml
examples/: custom_assistant_example.py
src/: main.py
src/agents/: custom_assistant.py
src/config/: agent_config.json
src/workflows/: basic_workflow.py
tests/: conftest.py  test_agents.py
